# fintrack-rs

./: Cargo.toml  README.md
crates/fintrack_data/: Cargo.toml
crates/fintrack_data/src/: fmp.rs  lib.rs  ticker.rs
