[package]
name = "fintrack-rs"
version = "0.1.0"
edition = "2024"

[workspace]

members = [
    "crates/fintrack_data"
]

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
fintrack_data = { version = "0.1.0", path = "crates/fintrack_data" }

[[bin]]
name = "fintrack-cli"
path = "src/bin/cli.rs"
